@@ -20,6 +20,9 @@
 //   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 //
 
+#include <sys/types.h>
+#include <unistd.h>
+
 #include <QtCore/QSignalMapper>
 #include <QtGui/QApplication>
 #include <QtGui/QFileDialog>
